# Multithreaded-MandelBrot

./: .gitignore  CMakeLists.txt  README.md  bmp.cpp  bmp.h  bmp_mand.h  main.cpp  mandelbrot.h  mandelmain.cpp
Mandelbrot/: CMakeLists.txt  mandelbrot.cpp  mandelbrot.h
Mandelbrot/Threadpool/: CMakeLists.txt  Threadpool.cpp  Threadpool.h
Threadpool/: Threadpool.cpp  Threadpool.h
test/: nop-mt.txt  nop-st.txt  op-mt.txt  op-st.txt
